File Name: CHANGES

06/08/2014 FASP 1.5.3:
- Add Smoothed Aggregation AMG for BSR format.
- Add solver for linear elasiticy (under development).
- Add subroutines for read in and write HB format files.
- Change some macros to prevent confliction with MPI.h.
- Change macros accordingly for interfaces and other FASP projects.
- Fix a bug in tutorial when using AMG as a solver.
- Fix a bug in SPE1 tutorial example.
- Fix a bug in mkheaders.awk which cause incompatible linkage with cpp.
- Fix a few Doxygen problems. 
- Update documentation and website.

05/27/2014 FASP 1.5.2:
- Update some more 'char *' to 'const char *'.
- Fix BiCGstab divided by zero problem.
- Fix pairwise aggregation core dumped bug caused by number of passes.
- Fix a '}' caused by openmp parallelization in smooth_agg subroutine.
- Fix a potential memory bug in multipass pairwise aggregation.
- Adjust default parameters slightly.
- Update webpage.

05/17/2014 FASP 1.5.1:
- Seperate factorization and solve for UMFpack.
- Add sweeping preconditioner.
- Fix a few compiler warnings recently introduced.
- Fix VS08 and VS10 solutions and prepare to test new code in BlkOil.
- Fix a bug in BCSR mat-vec multiplication.
- Change 'char *' to 'const char *' in io.c to prevent unsafe string pass.

04/24/2014 FASP 1.5.0:
- Add matching-base AMG methods (UA and SA).
- Fix a bug in dcsr_read.
- Fix an early exit problem in AMG coarsening. 
- Close an old branch (dead) and merge branches.
- Fix a wrong sign in smoothed aggregation method.
- Change a few internal function names for SA AMG.
- Update default strong_coupling parameter for VMB aggregation algorithm.
- Fix Doxygen problems introduced recently.

04/16/2014 FASP 1.4.9:
- Add free function for block_dCSRmat matrices. 
- Add block preconditioners for block_dCSRmat matrices.
- Add clang to default compiler searching list.
- Fix a typo in coarsening_rs.c.
- Add pairwise aggregation for AMG setup phase.

04/02/2014 FASP 1.4.8: